// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DetailedMessagesDisplay > renders info messages with info-level color 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────╮
│ Debug Console (F12 to close | F4 to search)                                  │
│                                                                              │
│ 1:All(1)*  2:Log(0)  3:Info(1)  4:Warn(0)  5:Error(0)  6:Debug(0)            │
│ ℹ  Info message                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`DetailedMessagesDisplay > renders message counts 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────╮
│ Debug Console (F12 to close | F4 to search)                                  │
│                                                                              │
│ 1:All(1)*  2:Log(1)  3:Info(0)  4:Warn(0)  5:Error(0)  6:Debug(0)            │
│ ℹ  Repeated message (x5)                                                     │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
"
`;

exports[`DetailedMessagesDisplay > renders messages correctly 1`] = `
"
╭──────────────────────────────────────────────────────────────────────────────╮
│ Debug Console (F12 to close | F4 to search)                                  │
│                                                                              │
│ 1:All(4)*  2:Log(1)  3:Info(1)  4:Warn(1)  5:Error(1)  6:Debug(0)            │
│ ℹ  Log message                                                               │
│ ℹ  Info message                                                              │
│ ⚠  Warning message                                                           │
│ ✖  Error message                                                             │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
"
`;
